more features pushed

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "telegram-users-bot",
+  "name": "telegram-swap-bot",
   "version": "1.0.0",
-  "description": "A Telegram bot that displays users",
+  "description": "A Telegram bot for crypto swaps",
   "main": "bot.js",
   "dependencies": {
     "dotenv": "^16.4.7",
+    "ethers": "^5.7.2",
     "node-telegram-bot-api": "^0.61.0"
   }
 }
